--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "**/node_modules/**": true,
         
         "**/venv/**": true
-    }
+    },
+    "python.pythonPath": "${workspaceFolder}/venv/bin/python"
 }
