--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
         
         "**/venv/**": true
     },
-    "python.pythonPath": "${workspaceFolder}/venv/bin/python"
+    "python.pythonPath": "${workspaceFolder}/venv/bin/python",
+    "python.linting.pylintArgs": [
+        "--load-plugins=pylint_django"
+    ]
 }
